# lattis

./: README.md  pyproject.toml
docs/: client-integration.md
frontend/: README.md  package.json  vite.config.ts
frontend/src/: app.tsx
frontend/src/app/: App.tsx
frontend/src/components/: ChatMessage.tsx
frontend/src/features/chat/: format.ts  types.ts
frontend/src/features/chat/components/: ChatComposer.tsx  ChatHeader.tsx  ChatMessage.tsx  ChatMessageList.tsx  ChatPanel.tsx  ToolCall.tsx
frontend/src/features/chat/hooks/: useAutoScroll.ts  useChatItems.ts  useChatStream.ts
frontend/src/features/threads/components/: AgentSelector.tsx  ModelSelector.tsx  ThreadList.tsx  ThreadPanel.tsx  ThreadSidebar.tsx  ThreadSidebarFooter.tsx
frontend/src/features/threads/hooks/: useThreadSession.ts
frontend/src/hooks/: useChatItems.ts
frontend/src/lib/: api.ts  chat.ts  openapi.ts
frontend/src/services/: latticeApi.ts  vercel.ts
frontend/src/shared/ui/: badge.tsx  button.tsx  input.tsx  scroll-area.tsx  separator.tsx  textarea.tsx
lattice/: cli.py
lattice/app/: __init__.py  bootstrap.py  context.py  thread_state.py
lattice/client/: api.py
lattice/core/: session.py  threads.py
lattice/domain/: model_selection.py
lattice/persistence/: sqlite_store.py
lattice/protocol/: __init__.py  models.py
lattice/runtime/: __init__.py  chat.py  thread_state.py
lattice/server/: app.py  deps.py  runtime.py
lattice/server/routers/: agents.py  meta.py  models.py  threads.py  ui.py
lattice/server/services/: agents.py  models.py  state.py
lattice/tui/: app.py  commands.py
scripts/: generate_openapi_json.py
tests/: test_services_agents.py  test_services_models.py  test_tui_commands.py
