[project]
name = "lattice"
version = "0.4.0"
description = "A pluggable agent toolkit (server + TUI + web UI)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
keywords = ["ai", "agent", "cli", "automation", "llm", "bash", "tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "logfire>=3.0.0",
    "pydantic-ai>=1.37.0",
    "textual>=6.11.0",
    "trafilatura>=2.0.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]

[project.urls]
Homepage = "https://github.com/caesarnine/lattice"
Repository = "https://github.com/caesarnine/lattice"
Issues = "https://github.com/caesarnine/lattice/issues"

[project.scripts]
lattice = "lattice.cli:main"

[project.entry-points."lattice.agents"]
lattice = "lattice.agents.builtins.lattice:plugin"
poetry = "lattice.agents.builtins.poetry:plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lattice"]

[tool.hatch.build.targets.wheel.force-include]
"lattice/web/static" = "lattice/web/static"

[tool.pytest.ini_options]
testpaths = ["tests"]
