[project]
name = "lattis"
version = "0.5.0"
description = "A pluggable agent toolkit (server + TUI + web UI)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
keywords = ["ai", "agent", "cli", "automation", "llm", "bash", "tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "pydantic-ai>=1.37.0",
    "textual>=6.11.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]
lint = ["ruff>=0.9.0"]

[project.urls]
Homepage = "https://github.com/caesarnine/lattis"
Repository = "https://github.com/caesarnine/lattis"
Issues = "https://github.com/caesarnine/lattis/issues"

[project.scripts]
lattis = "lattis.cli:main"

[project.entry-points."lattis.agents"]
assistant = "lattis.agents.builtins.assistant:plugin"
poetry = "lattis.agents.builtins.poetry:plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lattis"]

[tool.hatch.build.targets.wheel.force-include]
"lattis/web/static" = "lattis/web/static"

[tool.hatch.build.targets.sdist.force-include]
"lattis/web/static" = "lattis/web/static"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["F"]
